force-app/main/default/objects/Institute__c/fields/Alias_Name__c.field-meta.xml
<CustomField>
    <fullName>Alias_Name__c</fullName>
    <label>Alias Name</label>
    <length>30</length>
    <type>Text</type>
</CustomField>