force-app/main/default/objects/Institute__c/fields/Course__c.field-meta.xml
<CustomField>
    <fullName>Course__c</fullName>
    <label>Course</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Java fullstack</fullName>
            </value>
            <value>
                <fullName>python fullstack</fullName>
            </value>
            <value>
                <fullName>Web development</fullName>
            </value>
            <value>
                <fullName>Dot net</fullName>
            </value>
            <value>
                <fullName>Salesforce</fullName>
            </value>
            <value>
                <fullName>DevOps</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>