force-app/main/default/objects/Institute__c/fields/ins_fun__c.field-meta.xml
<CustomField>
    <fullName>ins_fun__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>ins_fun</label>
    <referenceTo>Fun__c</referenceTo>
    <relationshipLabel>Institutes</relationshipLabel>
    <relationshipName>Institutes</relationshipName>
    <type>Lookup</type>
</CustomField>