force-app/main/default/objects/Institute__c/fields/online__c.field-meta.xml
<CustomField>
    <fullName>online__c</fullName>
    <defaultValue>false</defaultValue>
    <label>online</label>
    <type>Checkbox</type>
</CustomField>