force-app/main/default/objects/Institute__c/recordTypes/institute.recordType-meta.xml
<RecordType>
    <fullName>institute</fullName>
    <active>true</active>
    <label>institute</label>
</RecordType>